# eclipsify

./: .rosinstall  CMakeLists.txt  README.md  package.xml  setup.py
cmake/: eclipsify.cmake
src/: eclipsify  eclipsify-gen-project
src/eclipsify_lib/: __init__.py  cproject_linux.py  cproject_osx.py  eclipsify_gen_project.py  generator.py  language_settings_linux.py  package_tools.py  project_osx.py  run_test.py  tools.py
src/eclipsify_lib/templates/: precondition.py  projectFiles.py
src/eclipsify_lib/templates/darwin/: .cproject  .project
src/eclipsify_lib/templates/linux2/: .cproject  .project
test/: acceptanceTests.py  testCPP.txt  unitTests.py
test/expected/testWs/devel/darwin/test_project_1/: .cproject  .project
test/expected/testWs/devel/linux2/test_project_1/: .cproject  .project
test/expected/testWs/src/darwin/test_project_1/: .cproject  .project
test/expected/testWs/src/linux2/test_project_1/: .cproject
test/testWs/src/test_project_1/: CMakeLists.txt  package.xml
