<?xml version="1.0"?>
<package format="2">
  <name>test_project_1</name>
  <version>0.0.1</version>
  <description>test_project_1</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
